# Multi-Agent-Procurement-Assistant

./: README.md  pyproject.toml
rfq_procurement_automation_test_mode/: crew.py
src/rfq_procurement_automation_test_mode/: main.py
src/rfq_procurement_automation_test_mode/config/: agents.yaml  tasks.yaml
