[project]
name = "rfq_procurement_automation_test_mode"
version = "0.1.0"
description = "rfq_procurement_automation_test_mode using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[litellm,tools]==1.11.0",
]

[project.scripts]
rfq_procurement_automation_test_mode = "rfq_procurement_automation_test_mode.main:run"
run_crew = "rfq_procurement_automation_test_mode.main:run"
train = "rfq_procurement_automation_test_mode.main:train"
replay = "rfq_procurement_automation_test_mode.main:replay"
test = "rfq_procurement_automation_test_mode.main:test"
run_with_trigger = "rfq_procurement_automation_test_mode.main:run_with_trigger"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"

[tool.uv]
override-dependencies = ["litellm<=1.82.6"]
